--- a/requirements.txt
+++ b/requirements.txt
@@ -9,5 +9,7 @@ typing_extensions==4.15.0
 
 # AI dependencies
 groq>=0.4.0
-google-generativeai>=0.3.0
+google-generativeai==0.3.1
+Flask-WTF==1.2.1
+Flask-Limiter==3.5.00
 numpy>=1.24.0
